--- a/Ejercitacion3FormularioCompleto/app/src/main/res/layout/activity_formulario.xml
+++ b/Ejercitacion3FormularioCompleto/app/src/main/res/layout/activity_formulario.xml
@@ -42,6 +42,7 @@
         android:id="@+id/edad_EditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="number"
         android:layout_below="@id/apellido_EditText"
         android:hint="Edad"
         android:layout_margin="5dp"
