--- a/MercadoAbierto/app/src/main/res/layout/fragment_lista_de_articulos.xml
+++ b/MercadoAbierto/app/src/main/res/layout/fragment_lista_de_articulos.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ListaDeArticulos">
+    tools:context=".ListaDeArticulosFragment">
 
 
     <androidx.recyclerview.widget.RecyclerView
