--- a/NuevoMercadoAbierto/app/src/main/res/layout/activity_main.xml
+++ b/NuevoMercadoAbierto/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.MainActivity">
+    tools:context=".view.MainActivity"
+    android:orientation="vertical">
 
     <FrameLayout
         android:id="@+id/mainActivity_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="310sp">
 
     </FrameLayout>
+
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/mainActivity_viewPagercontainer"
+        android:layout_marginTop="30sp"
+        android:layout_width="match_parent"
+        android:layout_height="300sp"
+        >
+
+    </androidx.viewpager.widget.ViewPager>
 
 
 </LinearLayout>
