--- a/NuevoMercadoAbierto/app/src/main/res/layout/fragment_lista_de_articulos.xml
+++ b/NuevoMercadoAbierto/app/src/main/res/layout/fragment_lista_de_articulos.xml
@@ -15,6 +15,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/fragmentArticulos_recycler"
         android:layout_marginTop="45dp"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
