--- a/NavigatinView/app/src/main/res/layout/header_navigationview.xml
+++ b/NavigatinView/app/src/main/res/layout/header_navigationview.xml
@@ -10,10 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="270dp" />
     <ImageView
-        android:scaleType="centerCrop"
+        android:layout_gravity="bottom"
+        android:scaleType="fitXY"
         android:src="@drawable/ic_launcher_foreground"
-        android:layout_width="match_parent"
-        android:layout_height="270dp" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <TextView
         android:layout_width="match_parent"
