--- a/CloudFirebase/app/src/main/res/layout/activity_main.xml
+++ b/CloudFirebase/app/src/main/res/layout/activity_main.xml
@@ -7,32 +7,12 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/nombre"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Nombre" />
-
-    <EditText
-        android:id="@+id/apellido"
-        android:layout_below="@+id/nombre"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Apellido"/>
-
-    <Button
-        android:id="@+id/enviar"
-        android:text="Enviar"
-        android:layout_below="@+id/apellido"
+    <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <Button
-        android:id="@+id/leer"
-        android:text="Leer"
-        android:layout_below="@+id/enviar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="Hola Culo!"
+        android:textSize="35dp"
+        android:layout_centerInParent="true"/>
 
 
 </RelativeLayout>
